Sincronizando com o final da aula
